# ayso418-website

./: .gitignore  Dockerfile  Pipfile  docker-compose.yml  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  tailwind.config.js  vite.config.js
.divio/: config.json
.github/: copilot-instructions.md
blocks/: blocks.py
contact/: models.py
contact/migrations/: 0001_initial.py
cta/: apps.py  models.py  wagtail_hooks.py
cta/migrations/: 0001_initial.py
documents/: models.py
documents/migrations/: 0001_initial.py
events/: models.py  wagtail_hooks.py
events/migrations/: 0001_initial.py  0002_eventspage.py  0003_event_reg_end_event_reg_start.py
faq/: models.py
faq/migrations/: 0001_initial.py
flexpage/: apps.py  models.py
flexpage/migrations/: 0001_initial.py  0002_alter_flexpage_body.py  0002_initial.py  0003_alter_flexpage_body.py  0003_flexpage_category_resourcesindex.py  0004_alter_flexpage_body.py  0004_alter_flexpage_body_alter_resourcesindex_body.py  0005_alter_flexpage_body.py  0005_alter_flexpage_body_alter_flexpage_callouts_and_more.py  0006_update_flexpage_layout_sections.py  0007_flexpage_callouts_alter_flexpage_body.py  0008_alter_flexpage_body_alter_resourcesindex_body.py
frontend/css/: main.css
home/: models.py  wagtail_hooks.py
images/: image_formats.py  models.py
mockups/: index.html
news/: models.py  wagtail_hooks.py
programs/: models.py
search/: views.py
site_settings/: context_processors.py  models.py  wagtail_hooks.py
website/: storage_backends.py  urls.py  wsgi.py
(+139 files in other folders)
