[project]
name = "ayso418-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.24",
    "cr>=1.10",
    "divio-cli>=4.0.5",
    "dj-database-url>=3.1.0",
    "django-debug-toolbar>=6.1.0",
    "django-widget-tweaks>=1.5.1",
    "psycopg2>=2.9.11",
    "sentry-sdk>=2.48.0",
    "wagtail>=7.2.1",
    "wagtail-localize>=1.12.2",
]
