[project]
name = "ayso418-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.24",
    "cr>=1.10",
    "divio-cli>=4.0.5",
    "dj-database-url>=3.1.0",
    "django>=6.0.0",
    "django-debug-toolbar>=6.2.0",
    "django-storages>=1.14.6",
    "django-widget-tweaks>=1.5.1",
    "gunicorn>=25.0.3",
    "psycopg2>=2.9.11",
    "sentry-sdk>=2.52.0",
    "wagtail>=7.3.0",
    "wagtail-localize>=1.13.0",
]
